syntax = "proto3";

package pusher;
option go_package = "./pusher";

message PushGroupReq {
  string app = 1;
  string gid = 2;
  bytes body = 5;
}

message PushGroupResp {}

message PushListReq {
  string app = 1;
  string from = 2;
  repeated string uid = 3;
  bytes body = 4;
}

message PushListResp {}

service Pusher {
  rpc PushGroup(PushGroupReq) returns (PushGroupResp);
  rpc PushList(PushListReq) returns (PushListResp);
}